<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">九库阅读</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请检查您的网络环境</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请提交错误报告，我们会尽快修复这个问题！</string>
    <string name="submit_report">提交报告</string>
    <string name="sure">确定</string>
    <string name="downapp_02_str">无法下载安装文件，请检查SD卡是否挂载</string>
    <string name="downapp_12_str">无法下载安装文件，请检查当前网络</string>
    <string name="downapp_03_str">正在检测，请稍后&#8230;</string>
    <string name="downapp_04_str">系统提示</string>
    <string name="downapp_05_str">您当前已经是最新版本</string>
    <string name="downapp_06_str">无法获取版本更新信息</string>
    <string name="downapp_07_str">软件版本更新</string>
    <string name="downapp_09_str">立即更新</string>
    <string name="downapp_10_str">以后再说</string>
    <string name="downapp_11_str">正在下载新版本</string>
    <string name="error_07_str">检查失败,没有连接网络</string>
    <string name="dialog_title">确定退出</string>
    <string name="dialog_content">看累了，想休息一下？</string>
    <string name="new_version_tip">有新版本哦，不更新一下看看？</string>
    <string name="cancel">取消</string>
    <string name="no_collection">暂无收藏记录</string>
    <string name="collection_detail">查看详情</string>
    <string name="author">作者：%1$s</string>
    <string name="detail_unique_visitor">人气：%1$s</string>
    <string name="introduce">简介：%1$s</string>
    <string name="load_ing">加载中···</string>
    <string name="load_full">已加载全部</string>
    <string name="search_no_input">输入不能为空!</string>
    <string name="backBookShelf">返回书架</string>
    <string name="menuRefresh">刷新章节</string>
    <string name="feedback">意见反馈</string>
    <string name="book_chapter_sum1">已更新</string>
    <string name="book_chapter_sum">0</string>
    <string name="book_chapter_sum2">章</string>
    <string name="menu_order_normal">正序</string>
    <string name="menu_order_reverse">倒序</string>
    <string name="user_FindPwd_Confirm">确认修改</string>
    <string name="user_FindPwd_Title">找回密码</string>
    <string name="user_FindPwd_Success">密码修改成功</string>
    <string name="user_FindPwd_NewOldPwd_Same">新密码与原密码一样</string>
    <string name="user_FindPwd_Fail">密码修改失败</string>
    <string name="cout_login">登录</string>
    <string name="login_failed">登录失败!</string>
    <string name="login_success">登录成功!</string>
    <string name="login_user_hint">请输入帐号或注册手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="register_username_error">*帐号长度限制2&#8211;16位，可以使用英文和数字</string>
    <string name="start_register">确认注册</string>
    <string name="register">注册</string>
    <string name="vp_reigster">会员注册</string>
    <string name="register_success">注册成功</string>
    <string name="user_FindPwd">忘记密码?</string>
    <string name="user_Pwd">密码</string>
    <string name="social_login">社交帐号登录</string>
    <string name="user_RegisterAccount">手机注册</string>
    <string name="register_user_hint">请输入帐号，限定4&#8211;20个英文/数字</string>
    <string name="register_password_hint">请输入密码，限定4&#8211;20个英文/数字</string>
    <string name="register_new_password_hint">设置新密码</string>
    <string name="affirm_password_hint">确认新密码</string>
    <string name="register_new_password">设置密码</string>
    <string name="affirm_password">确认密码</string>
    <string name="no_same_password">两次输入密码不一致</string>
    <string name="register_nick_hint">请输入昵称，限定4&#8211;20个字符</string>
    <string name="search">搜索</string>
    <string name="sign">签到</string>
    <string name="more">展开更多</string>
    <string name="notice">通知</string>
    <string name="lou">[%1$d楼]</string>
    <string name="error_BookInfo">获取图书信息错误</string>
    <string name="error_Chapter">获取章节出现错误</string>
    <string name="error_NetworkNotConnect">突然间找不到网络君!</string>
    <string name="error_Back">返回首页</string>
    <string name="error_Refresh">刷新</string>
    <string name="error_Setting">设置网络</string>
    <string name="intro_continue_read">继续阅读</string>
    <string name="network_request_failed">网络请求失败</string>
    <string name="parse_data_failed">解析数据失败</string>
    <string name="openIdError">openId错误</string>
    <string name="please_login">点击头像登录</string>
    <string name="confirm">确定</string>
    <string name="feedback_failed">反馈失败</string>
    <string name="dialog_tips">对话框提示语</string>
    <string name="version_update">版本更新</string>
    <string name="book_collect">加入书架</string>
    <string name="book_collected">已加书架</string>
    <string name="book_read_setting_more">更多设置</string>
    <string name="order_tip_no_money">您的帐号余额不足，请充值</string>
    <string name="cancel_user">切换帐号</string>
    <string name="please_login_first">请先登录</string>
    <string name="order_activity_tipC">有点小问题，系统君正在努力修复，请稍后再试。</string>
    <string name="user_recharge">用户充值</string>
    <string name="deleting_collection">正在删除&#8230;</string>
    <string name="image_des" />
    <string name="download">下载</string>
    <string name="tts">听书</string>
    <string name="umengShareEmptyPlatforms">分享平台列表为空</string>
    <string name="umengShareSuccess">%1$s分享成功啦</string>
    <string name="umengShareError">%1$s分享失败啦%2$s</string>
    <string name="umengShareCancel">%1$s分享取消了</string>
    <string name="defaultAlertTitle">系统提示</string>
    <string name="save">保存</string>
    <string name="publish">发布</string>
    <string name="modify">修改</string>
    <string name="no_data">没有数据</string>
    <string name="selectAll">全选</string>
    <string name="cancelSelectAll">取消全选</string>
    <string name="deleteFormat">删除（%1$s）</string>
    <string name="save_success">保存成功</string>
    <string name="submit_apply">提交申请</string>
    <string name="confirm_submit">确认提交</string>
    <string name="edit_info">修改信息</string>
    <string name="reply_title">回复评论</string>
    <string name="reply_publish">发表</string>
    <string name="reply_publishing">正在发表&#8230;</string>
    <string name="reply_failed">回复失败</string>
    <string name="reply_success">回复成功</string>
    <string name="comment_publish_fail">发表失败</string>
    <string name="comment_publish_success">发表成功</string>
    <string name="comment_publish_content_hint">随便说点什么吧</string>
    <string name="menuCommentTitle">大家正在聊</string>
    <string name="comment_detail">评论详情</string>
    <string name="recommend_title">推荐票</string>
    <string name="comment_detail_reply">回复</string>
    <string name="reward_success">打赏成功</string>
    <string name="reward_fail">打赏失败</string>
    <string name="balance_number">%1$s金币</string>
    <string name="submit">确认</string>
    <string name="orderSubmit">确认订阅</string>
    <string name="reward_before_login">请先登录再鼓励作者</string>
    <string name="readVIP_before_login">请先登录再观看VIP章节</string>
    <string name="book_collected_success">书籍收藏成功</string>
    <string name="book_collected_fail">添加失败</string>
    <string name="no_comment">评论为空</string>
    <string name="consume_record">消费记录</string>
    <string name="no_consume_record">暂无消费记录</string>
    <string name="no_prop_record">暂无道具记录</string>
    <string name="no_gold_record">暂无金币记录</string>
    <string name="exit_tips_title">退出提示</string>
    <string name="exit_tips">退出%1$s？</string>
    <string name="book_order_detail">订阅确认</string>
    <string name="order_account_balance">帐号余额：</string>
    <string name="never_tip_order">不再提醒我，并自动订阅下一章</string>
    <string name="never_tip2_order">您可以在应用设置里取消自动订阅</string>
    <string name="order_menu_name1">章节名：</string>
    <string name="order_book_name1">书名：</string>
    <string name="order_menu_words">章节字数：</string>
    <string name="order_book_words">全本字数：</string>
    <string name="order_menu_name">%1$s字</string>
    <string name="order_menu_need_gold1">章节价格：</string>
    <string name="order_book_need_gold1">全本价格：</string>
    <string name="order_menu_need_gold">%1$s库币（1元=100库币）</string>
    <string name="order_book_need_gold">%1$s库币（原价%2$s库币）</string>
    <string name="give_gold_coin">赠送金币</string>
    <string name="gold_coin_description">金币说明</string>
    <string name="prop_description">道具说明</string>
    <string name="order_recharge">充值:</string>
    <string name="order_donate">赠送:</string>
    <string name="order_pay">实款:</string>
    <string name="prompt">温馨提示</string>
    <string name="recommend_success">推荐成功</string>
    <string name="recommend_fail">推荐失败</string>
    <string name="had_recommend_ticket">推荐票剩余：</string>
    <string name="ticket_number">%1$s张</string>
    <string name="SubmitTicket">确认投票</string>
    <string name="SendTicketByCount">投递%1$s张推荐票！</string>
    <string name="search_hint">书名/作者名/关键词</string>
    <string name="recharge">快速充值</string>
    <string name="recharge_record">充值记录</string>
    <string name="no_recharge_record">暂无充值记录</string>
    <string name="ku">库币</string>
    <string name="gold">金币</string>
    <string name="cool_coin">库币</string>
    <string name="delete">删除</string>
    <string name="order_account">余额不足</string>
    <string name="about_me">关于九库</string>
    <string name="menu_tip">目录</string>
    <string name="guess">相似作品</string>
    <string name="comment_content_tip">内容不能为空且不低于%d个字</string>
    <string name="not_ticket">推荐票不足</string>
    <string name="not_money">余额不足，前往充值</string>
    <string name="use_egg_ticket">吐槽一下这部作品，需消耗1张鸡蛋票</string>
    <string name="use_recommend_ticket">为你喜爱的作品打call,需要消耗1张推荐票</string>
    <string name="no_recommend_ticket">推荐票不足，推荐失败</string>
    <string name="reply_reply">回复%1$s:</string>
    <string name="use_recommend">马上推荐</string>
    <string name="use_egg">马上吐槽</string>
    <string name="load_full_reply">已加载全部回复</string>
    <string name="commentFromPC">来自电脑</string>
    <string name="commentFromMobile">来自客户端</string>
    <string name="commentFromWAP">来自手机站</string>
    <string name="commentDownTooMany">被踩太多次，已经不能翻身了T_T</string>
    <string name="commentRepeatUP">你已经赞过</string>
    <string name="commentRepeatDown">你已经举报过</string>
    <string name="user_setting">应用设置</string>
    <string name="comment_time">两次评论间隔过短</string>
    <string name="downloading">正在下载%1$s</string>
    <string name="monthly_gold_not_enough_tip">余额不足，充值后再包月吧</string>
    <string name="monthly_success_tip">包月订阅成功！</string>
    <string name="monthly_fail_tip">包月订阅失败！</string>
    <string name="delete_success">删除成功</string>
    <string name="modification_fail">修改失败，请重试</string>
    <string name="modification_success">修改成功</string>
    <string name="modification_nickname_hint">昵称未修改，请输入新的昵称</string>
    <string name="modification_mobile_hint">请输入手机号</string>
    <string name="modification_mobile_added_hint">无需添加手机号</string>
    <string name="camera">拍照</string>
    <string name="photo">照片</string>
    <string name="vip_Title">会员特权</string>
    <string name="wx_NotWXAppInstalled">请安装微信后，再进行登陆操作</string>
    <string name="wx_OpenLoginAuth">正在打开微信，请授权登陆</string>
    <string name="wx_LoginResultEmpty">微信登陆异常，请稍后重试</string>
    <string name="wx_LoginResultEx">微信登陆解析异常，请稍后重试</string>
    <string name="wx_PaySupportedTip">未安装微信或微信版本太低，请检查后重新充值</string>
    <string name="wx_PayOpen">正在打开微信支付</string>
    <string name="wx_PayOrderJSONEmpty">微信订单异常，请稍后重试</string>
    <string name="wx_PayOrderJSONParamsError">微信订单参数丢失，请稍后重试</string>
    <string name="wx_PayOrderJSONEx">微信订单解析异常，请稍后重试</string>
    <string name="wx_PaySuccess">微信支付成功</string>
    <string name="wx_PayError">微信支付-1错误</string>
    <string name="wx_PayCancel">取消微信支付</string>
    <string name="hw_OpenHuaWei">正在登陆华为帐号</string>
    <string name="hw_ConnectHuaWei">华为服务连接失败,请退出应用重试</string>
    <string name="guide_choose">选择你喜欢的图书类别</string>
    <string name="guide_choose_state">我们为您定制推荐图书</string>
    <string name="guide_login">已有帐号，直接登录</string>
</resources>