<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl_Panel"
            android:layout_marginTop="@dimen/dp_150">

            <ImageView
                android:id="@+id/iv_Boy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:src="@mipmap/guide_boy"/>

            <ImageView
                android:id="@+id/iv_Girl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_10"
                android:src="@mipmap/guide_girl"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_Panel"
            android:layout_marginTop="@dimen/dp_30"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/guide_choose"
                android:textSize="18sp"
                android:textColor="@color/_252525"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/guide_choose_state"
                android:layout_marginTop="@dimen/dp_10"
                android:textSize="16sp"
                android:textColor="@color/_34a0e3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_alignParentBottom="true"
            android:background="@color/_34a0e3"
            android:id="@+id/loginPanel">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_login"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:padding="@dimen/dp_15"/>

        </LinearLayout>

    </RelativeLayout>
</layout>
